@@ -1,17 +1,16 @@
 // Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.execution;
 
-import com.intellij.ExtensionPoints;
+import com.intellij.codeInsight.daemon.impl.analysis.JavaModuleGraphUtil;
 import com.intellij.debugger.impl.GenericDebuggerRunnerSettings;
 import com.intellij.diagnostic.logging.OutputFileUtil;
 import com.intellij.execution.configurations.*;
 import com.intellij.execution.filters.ArgumentFileFilter;
 import com.intellij.execution.impl.ConsoleBuffer;
-import com.intellij.execution.process.OSProcessHandler;
-import com.intellij.execution.process.ProcessAdapter;
-import com.intellij.execution.process.ProcessEvent;
+import com.intellij.execution.process.*;
 import com.intellij.execution.runners.ExecutionEnvironment;
 import com.intellij.execution.runners.ProgramRunner;
+import com.intellij.execution.target.*;
 import com.intellij.execution.testDiscovery.JavaAutoRunManager;
 import com.intellij.execution.testframework.*;
 import com.intellij.execution.testframework.actions.AbstractRerunFailedTestsAction;
@@ -26,27 +25,38 @@ import com.intellij.execution.testframework.ui.BaseTestsOutputConsoleView;
 import com.intellij.execution.util.JavaParametersUtil;
 import com.intellij.execution.util.ProgramParametersConfigurator;
 import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.extensions.ExtensionPointName;
 import com.intellij.openapi.extensions.Extensions;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleUtilCore;
+import com.intellij.openapi.progress.EmptyProgressIndicator;
+import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.projectRoots.JavaSdkType;
+import com.intellij.openapi.projectRoots.JavaSdkVersion;
 import com.intellij.openapi.projectRoots.JdkUtil;
 import com.intellij.openapi.projectRoots.Sdk;
 import com.intellij.openapi.projectRoots.ex.JavaSdkUtil;
+import com.intellij.openapi.roots.CompilerModuleExtension;
 import com.intellij.openapi.roots.ModuleRootManager;
+import com.intellij.openapi.roots.ProjectFileIndex;
 import com.intellij.openapi.roots.ProjectRootManager;
 import com.intellij.openapi.util.Comparing;
 import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.CharsetToolkit;
+import com.intellij.openapi.vfs.JarFileSystem;
+import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.JavaPsiFacade;
 import com.intellij.psi.PsiDirectory;
+import com.intellij.psi.PsiJavaModule;
 import com.intellij.psi.PsiPackage;
+import com.intellij.psi.impl.PsiImplUtil;
 import com.intellij.psi.search.GlobalSearchScope;
 import com.intellij.psi.search.GlobalSearchScopesCore;
 import com.intellij.util.PathUtil;
+import com.intellij.util.PathsList;
 import com.intellij.util.ui.UIUtil;
 import org.jdom.Element;
 import org.jetbrains.annotations.NotNull;
@@ -64,6 +74,14 @@ public abstract class JavaTestFrameworkRunnableState<T extends
   & ConfigurationWithCommandLineShortener
   & SMRunnerConsolePropertiesProvider> extends JavaCommandLineState implements RemoteConnectionCreator {
   private static final Logger LOG = Logger.getInstance(JavaTestFrameworkRunnableState.class);
+
+  private static final ExtensionPointName<JUnitPatcher> JUNIT_PATCHER_EP = new ExtensionPointName<>("com.intellij.junitPatcher");
+  private static final String JIGSAW_OPTIONS = "Jigsaw Options";
+
+  public static ParamsGroup getJigsawOptions(JavaParameters parameters) {
+    return parameters.getVMParametersList().getParamsGroup(JIGSAW_OPTIONS);
+  }
+
   protected ServerSocket myServerSocket;
   protected File myTempFile;
   protected File myWorkingDirsFile = null;
@@ -102,9 +120,32 @@ public abstract class JavaTestFrameworkRunnableState<T extends
 
   @NotNull protected abstract String getForkMode();
 
-  @NotNull protected abstract OSProcessHandler createHandler(Executor executor) throws ExecutionException;
+  @NotNull
+  protected OSProcessHandler createHandler(Executor executor) throws ExecutionException {
+    appendForkInfo(executor);
+    appendRepeatMode();
 
-  public SearchForTestsTask createSearchingForTestsTask() {
+    TargetEnvironment remoteEnvironment = getEnvironment().getPreparedTargetEnvironment(new EmptyProgressIndicator());
+
+    TargetedCommandLineBuilder targetedCommandLineBuilder = createTargetedCommandLine(remoteEnvironment.getRequest(),
+                                                                                      getEnvironment().getTargetEnvironmentFactory().getTargetConfiguration());
+    TargetedCommandLine targetedCommandLine = targetedCommandLineBuilder.build();
+    Process process = remoteEnvironment.createProcess(targetedCommandLine, new EmptyProgressIndicator());
+
+    OSProcessHandler processHandler = new KillableColoredProcessHandler.Silent(process,
+                                                                               targetedCommandLine.getCommandPresentation(remoteEnvironment),
+                                                                               targetedCommandLine.getCharset(),
+                                                                               targetedCommandLineBuilder.getFilesToDeleteOnTermination());
+
+    ProcessTerminatedListener.attach(processHandler);
+    final SearchForTestsTask searchForTestsTask = createSearchingForTestsTask();
+    if (searchForTestsTask != null) {
+      searchForTestsTask.attachTaskToProcess(processHandler);
+    }
+    return processHandler;
+  }
+
+  public SearchForTestsTask createSearchingForTestsTask() throws ExecutionException {
     return null;
   }
 
@@ -116,19 +157,26 @@ public abstract class JavaTestFrameworkRunnableState<T extends
     return false;
   }
 
+  @NotNull
   @Override
-  protected GeneralCommandLine createCommandLine() throws ExecutionException {
-    GeneralCommandLine commandLine = super.createCommandLine().withInput(InputRedirectAware.getInputFile(getConfiguration()));
-    Map<String, String> content = commandLine.getUserData(JdkUtil.COMMAND_LINE_CONTENT);
+  protected TargetedCommandLineBuilder createTargetedCommandLine(@NotNull TargetEnvironmentRequest request,
+                                                                 @Nullable TargetEnvironmentConfiguration configuration)
+    throws ExecutionException {
+    TargetedCommandLineBuilder commandLineBuilder = super.createTargetedCommandLine(request, configuration);
+    File inputFile = InputRedirectAware.getInputFile(getConfiguration());
+    if (inputFile != null) {
+      commandLineBuilder.setInputFile(request.createUpload(inputFile.getAbsolutePath()));
+    }
+    Map<String, String> content = commandLineBuilder.getUserData(JdkUtil.COMMAND_LINE_CONTENT);
     if (content != null) {
       content.forEach((key, value) -> myArgumentFileFilters.add(new ArgumentFileFilter(key, value)));
     }
-    return commandLine;
+    return commandLineBuilder;
   }
 
   @NotNull
   @Override
-  public ExecutionResult execute(@NotNull Executor executor, @NotNull ProgramRunner runner) throws ExecutionException {
+  public ExecutionResult execute(@NotNull Executor executor, @NotNull ProgramRunner<?> runner) throws ExecutionException {
     final RunnerSettings runnerSettings = getRunnerSettings();
 
     final SMTRunnerConsoleProperties testConsoleProperties = getConfiguration().createTestConsoleProperties(executor);
@@ -192,16 +240,21 @@ public abstract class JavaTestFrameworkRunnableState<T extends
     return result;
   }
 
-  protected abstract void configureRTClasspath(JavaParameters javaParameters) throws CantRunException;
+  protected abstract void configureRTClasspath(JavaParameters javaParameters, Module module) throws CantRunException;
 
+  protected Sdk getJdk() {
+    Project project = getConfiguration().getProject();
+    final Module module = getConfiguration().getConfigurationModule().getModule();
+
+    return module == null ? ProjectRootManager.getInstance(project).getProjectSdk() : ModuleRootManager.getInstance(module).getSdk();
+  }
+  
   @Override
   protected JavaParameters createJavaParameters() throws ExecutionException {
     final JavaParameters javaParameters = new JavaParameters();
     Project project = getConfiguration().getProject();
     final Module module = getConfiguration().getConfigurationModule().getModule();
-
-    Sdk jdk = module == null ? ProjectRootManager.getInstance(project).getProjectSdk() : ModuleRootManager.getInstance(module).getSdk();
-    javaParameters.setJdk(jdk);
+    javaParameters.setJdk(getJdk());
 
     final String parameters = getConfiguration().getProgramParameters();
     getConfiguration().setProgramParameters(null);
@@ -211,10 +264,10 @@ public abstract class JavaTestFrameworkRunnableState<T extends
     finally {
       getConfiguration().setProgramParameters(parameters);
     }
-    javaParameters.getClassPath().addFirst(JavaSdkUtil.getIdeaRtJarPath());
     configureClasspath(javaParameters);
+    javaParameters.getClassPath().addFirst(JavaSdkUtil.getIdeaRtJarPath());
 
-    for (JUnitPatcher patcher : Extensions.getRootArea().<JUnitPatcher>getExtensionPoint(ExtensionPoints.JUNIT_PATCHER).getExtensionList()) {
+    for (JUnitPatcher patcher : JUNIT_PATCHER_EP.getExtensionList()) {
       patcher.patchJavaParameters(project, module, javaParameters);
     }
 
@@ -323,7 +376,7 @@ public abstract class JavaTestFrameworkRunnableState<T extends
       }
       if (enabled) {
         if (buf.length() > 0) buf.append(delimiter);
-        final Class classListener = listener.getClass();
+        final Class<?> classListener = listener.getClass();
         buf.append(classListener.getName());
         javaParameters.getClassPath().add(PathUtil.getJarPathForClass(classListener));
       }
@@ -331,16 +384,147 @@ public abstract class JavaTestFrameworkRunnableState<T extends
   }
 
   protected void configureClasspath(final JavaParameters javaParameters) throws CantRunException {
-    configureRTClasspath(javaParameters);
-    RunConfigurationModule module = getConfiguration().getConfigurationModule();
+    RunConfigurationModule configurationModule = getConfiguration().getConfigurationModule();
     final String jreHome = getConfiguration().isAlternativeJrePathEnabled() ? getConfiguration().getAlternativeJrePath() : null;
     final int pathType = JavaParameters.JDK_AND_CLASSES_AND_TESTS;
-    if (configureByModule(module.getModule())) {
-      JavaParametersUtil.configureModule(module, javaParameters, pathType, jreHome);
+    Module module = configurationModule.getModule();
+    if (configureByModule(module)) {
+      JavaParametersUtil.configureModule(configurationModule, javaParameters, pathType, jreHome);
+      LOG.assertTrue(module != null);
+      if (JavaSdkUtil.isJdkAtLeast(javaParameters.getJdk(), JavaSdkVersion.JDK_1_9)) {
+        configureModulePath(javaParameters, module);
+      }
     }
     else {
       JavaParametersUtil.configureProject(getConfiguration().getProject(), javaParameters, pathType, jreHome);
     }
+    configureRTClasspath(javaParameters, module);
+  }
+
+  protected static PsiJavaModule findJavaModule(Module module, boolean inTests) {
+    return DumbService.getInstance(module.getProject())
+      .computeWithAlternativeResolveEnabled(() -> JavaModuleGraphUtil.findDescriptorByModule(module, inTests));
+  }
+
+  private void configureModulePath(JavaParameters javaParameters, @NotNull Module module) {
+    if (!useModulePath()) return;
+    PsiJavaModule testModule = findJavaModule(module, true);
+    if (testModule != null) {
+      //adding the test module explicitly as it is unreachable from `idea.rt`
+      ParametersList vmParametersList = javaParameters
+        .getVMParametersList()
+        .addParamsGroup(JIGSAW_OPTIONS)
+        .getParametersList();
+
+      vmParametersList.add("--add-modules");
+      vmParametersList.add(testModule.getName());
+      //setup module path
+      PathsList classPath = javaParameters.getClassPath();
+      PathsList modulePath = javaParameters.getModulePath();
+      modulePath.addAll(classPath.getPathList());
+      classPath.clear();
+    }
+    else {
+      PsiJavaModule prodModule = findJavaModule(module, false);
+      if (prodModule != null) {
+        splitDepsBetweenModuleAndClasspath(javaParameters, module, prodModule);
+      }
+    }
+  }
+
+  /**
+   * Put dependencies reachable from module-info located in production sources on the module path
+   * leave all other dependencies on the class path as is
+   */
+  private void splitDepsBetweenModuleAndClasspath(JavaParameters javaParameters, Module module, PsiJavaModule prodModule) {
+    CompilerModuleExtension compilerExt = CompilerModuleExtension.getInstance(module);
+    if (compilerExt == null) return;
+
+    PathsList modulePath = javaParameters.getModulePath();
+    PathsList classPath = javaParameters.getClassPath();
+
+    putDependenciesOnModulePath(modulePath, classPath, prodModule);
+
+    ParametersList vmParametersList = javaParameters.getVMParametersList()
+      .addParamsGroup(JIGSAW_OPTIONS)
+      .getParametersList();
+    String prodModuleName = prodModule.getName();
+
+    //ensure test output is merged to the production module
+    VirtualFile testOutput = compilerExt.getCompilerOutputPathForTests();
+    if (testOutput != null) {
+      vmParametersList.add("--patch-module");
+      vmParametersList.add(prodModuleName + "=" + testOutput.getPath());
+    }
+
+    //ensure test dependencies missing from production module descriptor are available in tests
+    //todo enumerate all test dependencies explicitly
+    vmParametersList.add("--add-reads");
+    vmParametersList.add(prodModuleName + "=ALL-UNNAMED");
+
+    //open packages with tests to test runner
+    List<String> opensOptions = new ArrayList<>();
+    collectPackagesToOpen(opensOptions);
+    for (String option : opensOptions) {
+      if (option.isEmpty()) continue;
+      vmParametersList.add("--add-opens");
+      vmParametersList.add(prodModuleName + "/" + option + "=ALL-UNNAMED");
+    }
+
+    //ensure production module is explicitly added as test starter in `idea-rt` doesn't depend on it
+    vmParametersList.add("--add-modules");
+    vmParametersList.add(prodModuleName);
+  }
+
+  protected void collectPackagesToOpen(List<String> options) { }
+
+  /**
+   * called on EDT
+   */
+  protected static void collectSubPackages(List<String> options, PsiPackage aPackage, GlobalSearchScope globalSearchScope) {
+    if (aPackage.getClasses(globalSearchScope).length > 0) {
+      options.add(aPackage.getQualifiedName());
+    }
+    PsiPackage[] subPackages = aPackage.getSubPackages(globalSearchScope);
+    for (PsiPackage subPackage : subPackages) {
+      collectSubPackages(options, subPackage, globalSearchScope);
+    }
+  }
+
+  protected static void putDependenciesOnModulePath(PathsList modulePath,
+                                                    PathsList classPath,
+                                                    PsiJavaModule prodModule) {
+    Set<PsiJavaModule> allRequires = JavaModuleGraphUtil.getAllDependencies(prodModule);
+    allRequires.add(prodModule);    //put production output on the module path as well
+    JarFileSystem jarFS = JarFileSystem.getInstance();
+    ProjectFileIndex fileIndex = ProjectFileIndex.getInstance(prodModule.getProject());
+    allRequires.stream()
+      .filter(javaModule -> !PsiJavaModule.JAVA_BASE.equals(javaModule.getName()))
+      .map(javaModule -> getClasspathEntry(javaModule, fileIndex, jarFS))
+      .filter(Objects::nonNull)
+      .forEach(file -> putOnModulePath(modulePath, classPath, file));
+  }
+
+  private static void putOnModulePath(PathsList modulePath, PathsList classPath, VirtualFile virtualFile) {
+    String path = PathUtil.getLocalPath(virtualFile.getPath());
+    if (classPath.getPathList().contains(path)) {
+      classPath.remove(path);
+      modulePath.add(path);
+    }
+  }
+
+  private static VirtualFile getClasspathEntry(PsiJavaModule javaModule,
+                                               ProjectFileIndex fileIndex,
+                                               JarFileSystem jarFileSystem) {
+    VirtualFile moduleFile = PsiImplUtil.getModuleVirtualFile(javaModule);
+
+    Module moduleDependency = fileIndex.getModuleForFile(moduleFile);
+    if (moduleDependency == null) {
+      return jarFileSystem.getLocalVirtualFileFor(moduleFile);
+    }
+
+    CompilerModuleExtension moduleExtension = CompilerModuleExtension.getInstance(moduleDependency);
+    return moduleExtension != null ? moduleExtension.getCompilerOutputPath() : null;
   }
 
   protected void createServerSocket(JavaParameters javaParameters) {
@@ -378,7 +562,7 @@ public abstract class JavaTestFrameworkRunnableState<T extends
   }
 
   /**
-   * Configuration based on package which spans multiple modules
+   * Configuration based on a package spanning multiple modules.
    */
   protected boolean forkPerModule() {
     return getScope() != TestSearchScope.SINGLE_MODULE &&
@@ -427,19 +611,23 @@ public abstract class JavaTestFrameworkRunnableState<T extends
 
           if (classpath == null) {
             final JavaParameters parameters = new JavaParameters();
-            parameters.getClassPath().add(JavaSdkUtil.getIdeaRtJarPath());
-             try {
-               configureRTClasspath(parameters);
-               JavaParametersUtil.configureModule(module, parameters, JavaParameters.JDK_AND_CLASSES_AND_TESTS,
-                                                 getConfiguration().isAlternativeJrePathEnabled() ? getConfiguration().getAlternativeJrePath() : null);
-              wWriter.println(parameters.getClassPath().getPathsString());
+            try {
+              JavaParametersUtil.configureModule(module, parameters, JavaParameters.JDK_AND_CLASSES_AND_TESTS,
+                                                 getConfiguration().isAlternativeJrePathEnabled() ? getConfiguration()
+                                                   .getAlternativeJrePath() : null);
+              if (JavaSdkUtil.isJdkAtLeast(parameters.getJdk(), JavaSdkVersion.JDK_1_9)) {
+                configureModulePath(parameters, module);
+              }
+              configureRTClasspath(parameters, module);
+              parameters.getClassPath().add(JavaSdkUtil.getIdeaRtJarPath());
+              writeClasspath(wWriter, parameters);
             }
             catch (CantRunException e) {
-              wWriter.println(javaParameters.getClassPath().getPathsString());
+              writeClasspath(wWriter, javaParameters);
             }
           }
           else {
-            wWriter.println(classpath);
+            writeClasspath(wWriter, javaParameters);
           }
 
           final List<String> classNames = perModule.get(module);
@@ -449,6 +637,22 @@ public abstract class JavaTestFrameworkRunnableState<T extends
           }
           wWriter.println(filters);
         }
+      }
+    }
+  }
+
+  private static void writeClasspath(PrintWriter wWriter, JavaParameters parameters) {
+    wWriter.println(parameters.getClassPath().getPathsString());
+    wWriter.println(parameters.getModulePath().getPathsString());
+    ParamsGroup paramsGroup = getJigsawOptions(parameters);
+    if (paramsGroup == null) {
+      wWriter.println(0);
+    }
+    else {
+      List<String> parametersList = paramsGroup.getParametersList().getList();
+      wWriter.println(parametersList.size());
+      for (String option : parametersList) {
+        wWriter.println(option);
       }
     }
   }
@@ -464,4 +668,8 @@ public abstract class JavaTestFrameworkRunnableState<T extends
   }
 
   public void appendRepeatMode() throws ExecutionException { }
+
+  protected boolean useModulePath() {
+    return true;
+  }
 }
